# LittleLemonCapstoneBack

./: .gitignore  Pipfile  pyproject.toml  readme.txt
LittleLemon/: settings.py  urls.py
restaurant/: models.py  serializers.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_menuitem_user_alter_booking_id_alter_menu_id.py  0003_menuitem_inventory_alter_menuitem_price.py
restaurant/static/css/: style.css
templates/: index.html
tests/restaurant/: test_models.py  test_views.py
