[tool.poetry]
name = "littlelemoncapstoneback"
version = "0.1.0"
description = ""
authors = ["arvidtorbjoernsen <47952684+arvidtorbjoernsen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
django = "^4.2.14"
pylint = "^2.17.5"
black = "^24.3.0"
djangorestframework = "^3.15.2"
djoser = "^2.2.0"
mysqlclient = "^2.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
